headers/sqlucode.h

/*
 *  SQL datatypes - Unicode
 */
#define SQL_WCHAR                (-8)
#define SQL_WVARCHAR                (-9)
#define SQL_WLONGVARCHAR            (-10)
#define SQL_C_WCHAR                SQL_WCHAR
#define SQL_C_TCHAR                SQL_C_WCHAR
#define SQL_C_TCHAR                SQL_C_CHAR
#define SQL_ALL_CATALOGSW            L"%"
#define SQL_ALL_SCHEMASW            L"%"
#define SQL_ALL_TABLE_TYPESW            L"%"
/*
 *  Size of SQLSTATE - Unicode
 */
#define SQL_SQLSTATE_SIZEW            10
/*
 *  Function Prototypes - Unicode
 */
SQLRETURN SQL_API SQLColAttributeW (
    SQLHSTMT          hstmt,
    SQLUSMALLINT      iCol,
    SQLUSMALLINT      iField,
    SQLPOINTER          pCharAttr,
    SQLSMALLINT          cbCharAttrMax,
    SQLSMALLINT        * pcbCharAttr,
    SQLLEN        * pNumAttr);
SQLRETURN SQL_API SQLColAttributesW (
    SQLHSTMT          hstmt,
    SQLUSMALLINT      icol,
    SQLUSMALLINT      fDescType,
    SQLPOINTER          rgbDesc,
    SQLSMALLINT          cbDescMax,
    SQLSMALLINT        * pcbDesc,
    SQLLEN        * pfDesc);
SQLRETURN SQL_API SQLConnectW (
    SQLHDBC          hdbc,
    SQLWCHAR        * szDSN,
    SQLSMALLINT          cbDSN,
    SQLWCHAR        * szUID,
    SQLSMALLINT          cbUID,
    SQLWCHAR        * szAuthStr,
    SQLSMALLINT          cbAuthStr);
SQLRETURN SQL_API SQLDescribeColW (
    SQLHSTMT          hstmt,
    SQLUSMALLINT      icol,
    SQLWCHAR        * szColName,
    SQLSMALLINT          cbColNameMax,
    SQLSMALLINT        * pcbColName,
    SQLSMALLINT        * pfSqlType,
    SQLULEN        * pcbColDef,
    SQLSMALLINT        * pibScale,
    SQLSMALLINT        * pfNullable);
SQLRETURN SQL_API SQLErrorW (
    SQLHENV          henv,
    SQLHDBC          hdbc,
    SQLHSTMT          hstmt,
    SQLWCHAR        * szSqlState,
    SQLINTEGER        * pfNativeError,
    SQLWCHAR        * szErrorMsg,
    SQLSMALLINT          cbErrorMsgMax,
    SQLSMALLINT        * pcbErrorMsg);
SQLRETURN SQL_API SQLExecDirectW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szSqlStr,
    SQLINTEGER          cbSqlStr);
SQLRETURN SQL_API SQLGetConnectAttrW (
    SQLHDBC          hdbc,
    SQLINTEGER          fAttribute,
    SQLPOINTER          rgbValue,
    SQLINTEGER          cbValueMax,
    SQLINTEGER        * pcbValue);
SQLRETURN SQL_API SQLGetCursorNameW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szCursor,
    SQLSMALLINT          cbCursorMax,
    SQLSMALLINT        * pcbCursor);
SQLRETURN SQL_API SQLSetDescFieldW (
    SQLHDESC          DescriptorHandle,
    SQLSMALLINT          RecNumber,
    SQLSMALLINT          FieldIdentifier,
    SQLPOINTER          Value,
    SQLINTEGER          BufferLength);
SQLRETURN SQL_API SQLGetDescFieldW (
    SQLHDESC          hdesc,
    SQLSMALLINT          iRecord,
    SQLSMALLINT          iField,
    SQLPOINTER          rgbValue,
    SQLINTEGER          cbValueMax,
    SQLINTEGER        * pcbValue);
SQLRETURN SQL_API SQLGetDescRecW (
    SQLHDESC          hdesc,
    SQLSMALLINT          iRecord,
    SQLWCHAR        * szName,
    SQLSMALLINT          cbNameMax,
    SQLSMALLINT        * pcbName,
    SQLSMALLINT        * pfType,
    SQLSMALLINT        * pfSubType,
    SQLLEN        * pLength,
    SQLSMALLINT        * pPrecision,
    SQLSMALLINT        * pScale,
    SQLSMALLINT        * pNullable);
SQLRETURN SQL_API SQLGetDiagFieldW (
    SQLSMALLINT          fHandleType,
    SQLHANDLE          handle,
    SQLSMALLINT          iRecord,
    SQLSMALLINT          fDiagField,
    SQLPOINTER          rgbDiagInfo,
    SQLSMALLINT          cbDiagInfoMax,
    SQLSMALLINT        * pcbDiagInfo);
SQLRETURN SQL_API SQLGetDiagRecW (
    SQLSMALLINT          fHandleType,
    SQLHANDLE          handle,
    SQLSMALLINT          iRecord,
    SQLWCHAR        * szSqlState,
    SQLINTEGER        * pfNativeError,
    SQLWCHAR        * szErrorMsg,
    SQLSMALLINT          cbErrorMsgMax,
    SQLSMALLINT        * pcbErrorMsg);
SQLRETURN SQL_API SQLPrepareW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szSqlStr,
    SQLINTEGER          cbSqlStr);
SQLRETURN SQL_API SQLSetConnectAttrW (
    SQLHDBC          hdbc,
    SQLINTEGER          fAttribute,
    SQLPOINTER          rgbValue,
    SQLINTEGER          cbValue);
SQLRETURN SQL_API SQLTablesW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLWCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLWCHAR        * szTableName,
    SQLSMALLINT          cbTableName,
    SQLWCHAR        * szTableType,
    SQLSMALLINT          cbTableType);
#define SQLSpecialColumns    SQLSpecialColumnsW
#define SQLStatistics        SQLStatisticsW
#define SQLTables        SQLTablesW