headers/sql.h

SQLRETURN SQL_API SQLSetStmtOption (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      Option,
    SQLULEN          Value);
SQLRETURN SQL_API SQLTransact (
    SQLHENV          EnvironmentHandle,
    SQLHDBC          ConnectionHandle,
    SQLUSMALLINT      CompletionType);
/*
 *  Depreciated ODBC 1.0 function - Use SQLBindParameter
 */
SQLRETURN SQL_API SQLSetParam (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ParameterNumber,
    SQLSMALLINT          ValueType,
    SQLSMALLINT          ParameterType,
    SQLULEN          LengthPrecision,
    SQLSMALLINT          ParameterScale,
    SQLPOINTER          ParameterValue,
    SQLLEN        * StrLen_or_Ind);