headers/sqlext.h

    /*
     *  C datatype to SQL datatype mapping
     */
#define SQL_C_CHAR                   SQL_CHAR