sql.py


        if hasattr(self.ODBC_DRIVER, "SQLSetStmtOption"):
            self.ODBC_DRIVER.SQLSetStmtOption.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetStmtOption.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLULEN,)
            self.SQLSetStmtOption = self.ODBC_DRIVER.SQLSetStmtOption
        else:
            self.SQLSetStmtOption = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSpecialColumns"):
            self.ODBC_DRIVER.SQLSpecialColumns.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSpecialColumns.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, self.SQLUSMALLINT, self.SQLUSMALLINT,)
            self.SQLSpecialColumns = self.ODBC_DRIVER.SQLSpecialColumns
        else:
            self.SQLSpecialColumns = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLStatistics"):
            self.ODBC_DRIVER.SQLStatistics.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLStatistics.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, self.SQLUSMALLINT, self.SQLUSMALLINT,)
            self.SQLStatistics = self.ODBC_DRIVER.SQLStatistics
        else:
            self.SQLStatistics = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLTables"):
            self.ODBC_DRIVER.SQLTables.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLTables.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLTables = self.ODBC_DRIVER.SQLTables
        else:
            self.SQLTables = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLTransact"):
            self.ODBC_DRIVER.SQLTransact.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLTransact.argtypes = (self.SQLHENV, self.SQLHDBC, self.SQLUSMALLINT,)
            self.SQLTransact = self.ODBC_DRIVER.SQLTransact
        else:
            self.SQLTransact = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetParam"):
            self.ODBC_DRIVER.SQLSetParam.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetParam.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLULEN, self.SQLSMALLINT, self.SQLPOINTER, ctypes.POINTER(self.SQLLEN),)
            self.SQLSetParam = self.ODBC_DRIVER.SQLSetParam
        else:
            self.SQLSetParam = self.UnimplementedSQLFunction

        ####----------------------------------------------------------------------------
        ####This section mimics sqlucode.h----------------------------------------------
        ####----------------------------------------------------------------------------
        ################################################################################
        ####SQL datatypes - Unicode#####################################################
        ################################################################################
        self.SQL_WCHAR = -8
        self.SQL_WVARCHAR = -9
        self.SQL_WLONGVARCHAR = -10
        self.SQL_C_WCHAR = self.SQL_WCHAR

        if self.UNICODE:
            self.SQL_C_TCHAR = self.SQL_C_WCHAR
        else:
            self.SQL_C_TCHAR = self.SQL_C_CHAR

        ################################################################################
        ####SQLTablesW##################################################################
        ################################################################################
        self.SQL_ALL_CATALOGSW = "%"
        self.SQL_ALL_SCHEMASW = "%"
        self.SQL_ALL_TABLE_TYPESW = "%"

        ################################################################################
        ####SQL_SQLSTATE_SIZEW##########################################################
        ################################################################################
        self.SQL_SQLSTATE_SIZEW = 10

        ################################################################################
        ####Function Prototypes - Unicode###############################################
        ################################################################################
        if hasattr(self.ODBC_DRIVER, "SQLColAttributeW"):
            self.ODBC_DRIVER.SQLColAttributeW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLColAttributeW.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLUSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLLEN),)
            self.SQLColAttributeW = self.ODBC_DRIVER.SQLColAttributeW
        else:
            self.SQLColAttributeW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLColAttributesW"):
            self.ODBC_DRIVER.SQLColAttributesW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLColAttributesW.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLUSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLLEN),)
            self.SQLColAttributesW = self.ODBC_DRIVER.SQLColAttributesW
        else:
            self.SQLColAttributesW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLConnectW"):
            self.ODBC_DRIVER.SQLConnectW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLConnectW.argtypes = (self.SQLHDBC, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT,)
            self.SQLConnectW = self.ODBC_DRIVER.SQLConnectW
        else:
            self.SQLConnectW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDescribeColW"):
            self.ODBC_DRIVER.SQLDescribeColW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDescribeColW.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLULEN), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLDescribeColW = self.ODBC_DRIVER.SQLDescribeColW
        else:
            self.SQLDescribeColW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLErrorW"):
            self.ODBC_DRIVER.SQLErrorW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLErrorW.argtypes = (self.SQLHENV, self.SQLHDBC, self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), ctypes.POINTER(self.SQLINTEGER), ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLErrorW = self.ODBC_DRIVER.SQLErrorW
        else:
            self.SQLErrorW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLExecDirectW"):
            self.ODBC_DRIVER.SQLExecDirectW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLExecDirectW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLINTEGER,)
            self.SQLExecDirectW = self.ODBC_DRIVER.SQLExecDirectW
        else:
            self.SQLExecDirectW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetConnectAttrW"):
            self.ODBC_DRIVER.SQLGetConnectAttrW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetConnectAttrW.argtypes = (self.SQLHDBC, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER, ctypes.POINTER(self.SQLINTEGER),)
            self.SQLGetConnectAttrW = self.ODBC_DRIVER.SQLGetConnectAttrW
        else:
            self.SQLGetConnectAttrW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetCursorNameW"):
            self.ODBC_DRIVER.SQLGetCursorNameW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetCursorNameW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetCursorNameW = self.ODBC_DRIVER.SQLGetCursorNameW
        else:
            self.SQLGetCursorNameW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetDescFieldW"):
            self.ODBC_DRIVER.SQLSetDescFieldW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetDescFieldW.argtypes = (self.SQLHDESC, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, self.SQLINTEGER,)
            self.SQLSetDescFieldW = self.ODBC_DRIVER.SQLSetDescFieldW
        else:
            self.SQLSetDescFieldW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDescFieldW"):
            self.ODBC_DRIVER.SQLGetDescFieldW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDescFieldW.argtypes = (self.SQLHDESC, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, self.SQLINTEGER, ctypes.POINTER(self.SQLINTEGER),)
            self.SQLGetDescFieldW = self.ODBC_DRIVER.SQLGetDescFieldW
        else:
            self.SQLGetDescFieldW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDescRecW"):
            self.ODBC_DRIVER.SQLGetDescRecW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDescRecW.argtypes = (self.SQLHDESC, self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLLEN), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetDescRecW = self.ODBC_DRIVER.SQLGetDescRecW
        else:
            self.SQLGetDescRecW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDiagFieldW"):
            self.ODBC_DRIVER.SQLGetDiagFieldW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDiagFieldW.argtypes = (self.SQLSMALLINT, self.SQLHANDLE, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetDiagFieldW = self.ODBC_DRIVER.SQLGetDiagFieldW
        else:
            self.SQLGetDiagFieldW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDiagRecW"):
            self.ODBC_DRIVER.SQLGetDiagRecW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDiagRecW.argtypes = (self.SQLSMALLINT, self.SQLHANDLE, self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), ctypes.POINTER(self.SQLINTEGER), ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetDiagRecW = self.ODBC_DRIVER.SQLGetDiagRecW
        else:
            self.SQLGetDiagRecW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLPrepareW"):
            self.ODBC_DRIVER.SQLPrepareW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLPrepareW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLINTEGER,)
            self.SQLPrepareW = self.ODBC_DRIVER.SQLPrepareW
        else:
            self.SQLPrepareW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetConnectAttrW"):
            self.ODBC_DRIVER.SQLSetConnectAttrW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetConnectAttrW.argtypes = (self.SQLHDBC, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER,)
            self.SQLSetConnectAttrW = self.ODBC_DRIVER.SQLSetConnectAttrW
        else:
            self.SQLSetConnectAttrW = self.UnimplementedSQLFunction
